namespacing for scss fixed, require and import not working

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,1 +1,1 @@
-body{font-family:Raleway,sans-serif;margin:0;padding:0}
+@import url(https://fonts.googleapis.com/css?family=Raleway);#main{font-family:Raleway,sans-serif;margin:0;padding:0;background-color:#000;color:#fff}
